--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Get Picture React</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
