--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://cdn.remixicon.com/releases/v2.1.0/remixicon.css"
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
 
